<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title1"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        style="@android:style/ButtonBar"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/button3"
        android:onClick="startSpotifyStreamer" />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="startScores"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="20dp"
        android:onClick="startLibrary"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="startBuilder"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="startReader"
        />

    <Button
        style="@android:style/ButtonBar"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_purple"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button5"
        android:layout_marginBottom="10dp"
        android:onClick="startCapstone"
        />


</RelativeLayout>
